--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,14 @@
         }
     ],
     "require": {
-        "symfony/framework-bundle": "2.*",
-        "imagine/Imagine": "v0.5.0"
+        "symfony/framework-bundle": "~2.0",
+        "imagine/Imagine": "~0.5"
     },
     "require-dev": {
         "makasim/temp-file": "dev-master"
     },
     "suggest": {
-        "symfony/twig-bundle": "2.*"
+        "symfony/twig-bundle": "~2.0"
     },
     "autoload": {
         "psr-0": { "Avalanche\\Bundle\\ImagineBundle": "" }
