--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "symfony/framework-bundle": "~2.0",
+        "symfony/framework-bundle": "~2.0||~3.0",
         "imagine/Imagine": "~0.5"
     },
     "require-dev": {
@@ -28,7 +28,7 @@
     },
     "suggest": {
         "kriswallsmith/assetic": "Allows to use Assetic optipng filter (soon more too come)",
-        "symfony/twig-bundle": "~2.0"
+        "symfony/twig-bundle": "~2.0||~3.0"
     },
     "autoload": {
         "psr-0": { "Avalanche\\Bundle\\ImagineBundle": "" }
